# epcmr-public

./: .gitignore  CMakeLists.txt  EPCMR.code-workspace  EPCMR.py  EPCMR.s4ext  LICENSE  README.md  pyproject.toml
EPCMRLib/: EPCMRParameterNode.py
EPCMRLib/FreeAngulator/: FreeAngulatorLogic.py  FreeAngulatorWidget.py
EPCMRLib/Mapping/: MappingModeSelector.py
EPCMRLib/PVCAblation/: PVCLogic.py  PVCWidget.py
EPCMRLib/RAFlutter/: RAFlutterLogic.py  RAFlutterWidget.py
EPCMRLib/Utilities/: CatheterReplayer.py  ColorMapper.py  GeometryInterpolator.py  MappingEventController.py  ModelObserver.py  RACloneManager.py  SceneManager.py  ShortcutManager.py
ExampleData/readPickleShotList/: ReadPickle_shotList10.py
ExampleData/stlModels/: IVC BJ 78465309.stl  RightAtriumCardiac BJ 78465309.stl  RightVentricleCardiac BJ 78465309.stl  SVC BJ 78465309.stl
Resources/: Human.vtp  newSascha12_FH_green_PartID.vtp  newSascha12_FH_red_PartID.vtp
Resources/UI/: RAFlutter.ui
docs/: MRTC_briefly_explained.md  README.md
mrtc_CathTrack/: mrtc_CathTrack.py  mrtc_func.py  mrtc_pb2.py
typings/: ScriptedLoadableModule.pyi
typings/ctk/: __init__.pyi
typings/qt/: __init__.pyi
typings/slicer/: __init__.pyi
typings/vtkmodules/: __init__.pyi
